# class-codes

./: Introdução_ao_pandas.ipynb  README.md  scrapy_da_localização.ipynb  webscrapy_101.ipynb
aula-streamlit-exemplo/: pyproject.toml
aula-streamlit-exemplo/aula_streamlit_exemplo/: hello.py
aula-streamlit-exemplo/aula_streamlit_exemplo.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
aula-streamlit-exemplo/tests/: test_aula_streamlit_exemplo.py
