[tool.poetry]
name = "aula-streamlit-exemplo"
version = "0.1.0"
description = ""
authors = ["Mario H. Adaniya <mhadaniya@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
streamlit = "^0.70.0"
django = "^3.1.3"
BeautifulSoup4 = "^4.9.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
